# mapping-app

./: .env.example  .gitignore  2026-01-11-help-me-plan-a-production-grade-web-gis-applicatio.txt  CLAUDE.md  README.md  docker-compose.yml
azure/: README.md  (+3 more)
backend/: .dockerignore  Dockerfile  Dockerfile.prod  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 001_add_registration_requests.py  002_add_email_confirmation_tokens.py  003_add_dataset_organization.py  004_add_service_catalogs.py  005_add_dataset_projects_and_snapshots.py  006_add_user_roles.py  007_add_templates.py  008_add_template_source_fields.py  009_add_fk_ondelete_actions.py  010_add_bundle_id.py  011_add_client_nonce.py  012_add_error_code.py  (+1 more)
backend/app/: config.py  database.py  main.py
backend/tests/: conftest.py  test_access_control.py  test_api_auth.py  test_api_backups.py  test_api_datasets.py  test_api_templates.py  test_api_users.py  test_api_wfs.py  test_backup_service.py  test_blob_backup.py  test_config.py  test_crud.py  test_esri_json.py  test_external_source.py  test_file_processor.py  test_filter_parser.py  test_layout_generator.py  test_main.py  test_project_permissions.py  test_query_handler.py  test_raster_export.py  test_raster_tiles.py  test_rate_limit.py  test_registration.py  test_security.py  test_sql_validation.py  test_ssrf_validation.py  test_style_exporter.py  test_template_parser.py  test_upload_bundle.py  test_upload_errors.py  test_upload_failure_visibility.py  test_upload_validation.py  test_upload_workspace.py  test_zip_inspector.py
(+276 files in other folders)
